==> ChibiOS/ChibiOS-Contrib/os/hal/ports/AT32/LLD/SDIOv1/hal_sdc_lld.c <==
#include <string.h>
#include "hal.h"
#define SDIO_STS_SBITERR        0
#define SDIO_INTCLR_SBITERR     0
#define SDIO_INTEN_SBITERRIEN   0
#define SDIO_INTCLR_ALL_FLAGS   0xFFFFFFFFU
#define SDIO_STS_ERROR_MASK                                                 \
  (SDIO_STS_CMDFAIL    | SDIO_STS_DTFAIL    |                               \
   SDIO_STS_CMDTIMEOUT | SDIO_STS_DTTIMEOUT |                               \
   SDIO_STS_TXERRU     | SDIO_STS_RXERRO)

void sdc_lld_init(void) {

  sdcObjectInit(&SDCD1);
  SDCD1.thread = NULL;
  SDCD1.dma    = NULL;
  SDCD1.sdio   = SDIO;
  nvicEnableVector(AT32_SDIO_NUMBER, AT32_SDC_SDIO_IRQ_PRIORITY);
}

void sdc_lld_start(SDCDriver *sdcp) {

  /* Checking configuration, using a default if NULL has been passed.*/
  if (sdcp->config == NULL) {
    sdcp->config = &sdc_default_cfg;
  }

  sdcp->dmamode = AT32_DMA_CCTRL_CHPL(AT32_SDC_SDIO_DMA_PRIORITY) |
                  AT32_DMA_CCTRL_PWIDTH_WORD |
                  AT32_DMA_CCTRL_MWIDTH_WORD |
                  AT32_DMA_CCTRL_MINCM;

  /* If in stopped state then clocks are enabled and DMA initialized.*/
  if (sdcp->state == BLK_STOP) {
    sdcp->dma = dmaStreamAllocI(AT32_SDC_SDIO_DMA_STREAM,
                                AT32_SDC_SDIO_IRQ_PRIORITY,
                                NULL,
                                NULL);
    osalDbgAssert(sdcp->dma != NULL, "unable to allocate stream");

#if AT32_DMA_SUPPORTS_DMAMUX
    dmaSetRequestSource(sdcp->dma, AT32_SDC_SDIO_DMAMUX_CHANNEL, AT32_DMAMUX_SDIO);
#endif

    dmaStreamSetPeripheral(sdcp->dma, &sdcp->sdio->BUF);
    crmEnableSDIO(true);
  }

  /* Configuration, card clock is initially stopped.*/
  sdcp->sdio->PWRCTRL = 0U;
  sdcp->sdio->CLKCTRL = 0U;
  sdcp->sdio->DTCTRL  = 0U;
  sdcp->sdio->DTTMR   = 0U;
  sdcp->sdio->INTCLR  = SDIO_INTCLR_ALL_FLAGS;
}

void sdc_lld_stop(SDCDriver *sdcp) {

  if (sdcp->state != BLK_STOP) {

    /* SDIO deactivation.*/
    sdcp->sdio->PWRCTRL = 0U;
    sdcp->sdio->CLKCTRL = 0U;
    sdcp->sdio->DTCTRL  = 0U;
    sdcp->sdio->DTTMR   = 0U;

    /* DMA stream released.*/
    dmaStreamFreeI(sdcp->dma);
    sdcp->dma = NULL;

    /* Clock deactivation.*/
    crmDisableSDIO();
  }
}

void sdc_lld_start_clk(SDCDriver *sdcp) {

  /* Initial clock setting: 400kHz, 1bit mode.*/
  sdcp->sdio->CLKCTRL  = sdc_lld_clkdiv(sdcp, 400000);
  sdcp->sdio->PWRCTRL |= SDIO_PWRCTRL_PS_0 | SDIO_PWRCTRL_PS_1;
  sdcp->sdio->CLKCTRL |= SDIO_CLKCTRL_CLKOEN;

  /* Clock activation delay.*/
  osalThreadSleep(OSAL_MS2I(AT32_SDC_CLOCK_ACTIVATION_DELAY));
}

void sdc_lld_set_data_clk(SDCDriver *sdcp, sdcbusclk_t clk) {

  if (SDC_CLK_50MHz == clk) {
    sdcp->sdio->CLKCTRL = (sdcp->sdio->CLKCTRL & ~(SDIO_CLKCTRL_BYPSEN_Msk |
                                                   SDIO_CLKCTRL_PWRSVEN_Msk |
                                                   SDIO_CLKCTRL_CLKDIV_Msk)) |
#if AT32_SDC_SDIO_PWRSVEN
                         sdc_lld_clkdiv(sdcp, 50000000) | SDIO_CLKCTRL_PWRSVEN;
#else
                         sdc_lld_clkdiv(sdcp, 50000000);
#endif
  }
  else {
    sdcp->sdio->CLKCTRL = (sdcp->sdio->CLKCTRL & ~(SDIO_CLKCTRL_BYPSEN_Msk |
                                                   SDIO_CLKCTRL_PWRSVEN_Msk |
                                                   SDIO_CLKCTRL_CLKDIV_Msk)) |
#if AT32_SDC_SDIO_PWRSVEN
                         sdc_lld_clkdiv(sdcp, 25000000) | SDIO_CLKCTRL_PWRSVEN;
#else
                         sdc_lld_clkdiv(sdcp, 25000000);
#endif
  }
}

void sdc_lld_stop_clk(SDCDriver *sdcp) {

  sdcp->sdio->CLKCTRL = 0U;
  sdcp->sdio->PWRCTRL = 0U;
}

void sdc_lld_set_bus_mode(SDCDriver *sdcp, sdcbusmode_t mode) {
  uint32_t clk = sdcp->sdio->CLKCTRL & ~SDIO_CLKCTRL_BUSWS;

  switch (mode) {
  case SDC_MODE_1BIT:
    sdcp->sdio->CLKCTRL = clk;
    break;
  case SDC_MODE_4BIT:
    sdcp->sdio->CLKCTRL = clk | SDIO_CLKCTRL_BUSWS_0;
    break;
  case SDC_MODE_8BIT:
    sdcp->sdio->CLKCTRL = clk | SDIO_CLKCTRL_BUSWS_1;
    break;
  }
}

void sdc_lld_send_cmd_none(SDCDriver *sdcp, uint8_t cmd, uint32_t arg) {

  sdcp->sdio->ARG = arg;
  sdcp->sdio->CMD = (uint32_t)cmd | SDIO_CMD_CCSMEN;
  while ((sdcp->sdio->STS & SDIO_STS_CMDCMPL) == 0)
    ;
  sdcp->sdio->INTCLR = SDIO_INTCLR_CMDCMPL;
}

bool sdc_lld_send_cmd_short(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                            uint32_t *resp) {
  uint32_t sts;

  sdcp->sdio->ARG = arg;
  sdcp->sdio->CMD = (uint32_t)cmd | SDIO_CMD_RSPWT_0 | SDIO_CMD_CCSMEN;
  while (((sts = sdcp->sdio->STS) & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                                     SDIO_STS_CMDFAIL)) == 0)
    ;
  sdcp->sdio->INTCLR = sts & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                              SDIO_STS_CMDFAIL);
  if ((sts & (SDIO_STS_CMDTIMEOUT)) != 0) {
    sdc_lld_collect_errors(sdcp, sts);
    return HAL_FAILED;
  }
  *resp = sdcp->sdio->RSP1;
  return HAL_SUCCESS;
}

bool sdc_lld_send_cmd_short_crc(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                                uint32_t *resp) {
  uint32_t sts;

  sdcp->sdio->ARG = arg;
  sdcp->sdio->CMD = (uint32_t)cmd | SDIO_CMD_RSPWT_0 | SDIO_CMD_CCSMEN;
  while (((sts = sdcp->sdio->STS) & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                                     SDIO_STS_CMDFAIL)) == 0)
    ;
  sdcp->sdio->INTCLR = sts & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                              SDIO_STS_CMDFAIL);
  if ((sts & (SDIO_STS_CMDTIMEOUT | SDIO_STS_CMDFAIL)) != 0) {
    sdc_lld_collect_errors(sdcp, sts);
    return HAL_FAILED;
  }
  *resp = sdcp->sdio->RSP1;
  return HAL_SUCCESS;
}

bool sdc_lld_send_cmd_long_crc(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                               uint32_t *resp) {
  uint32_t sts;

  (void)sdcp;

  sdcp->sdio->ARG = arg;
  sdcp->sdio->CMD = (uint32_t)cmd | SDIO_CMD_RSPWT_0 | SDIO_CMD_RSPWT_1 |
                                    SDIO_CMD_CCSMEN;
  while (((sts = sdcp->sdio->STS) & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                                     SDIO_STS_CMDFAIL)) == 0)
    ;
  sdcp->sdio->INTCLR = sts & (SDIO_STS_CMDRSPCMPL | SDIO_STS_CMDTIMEOUT |
                              SDIO_STS_CMDFAIL);
  if ((sts & (SDIO_STS_ERROR_MASK)) != 0) {
    sdc_lld_collect_errors(sdcp, sts);
    return HAL_FAILED;
  }
  /* Save bytes in reverse order because MSB in response comes first.*/
  *resp++ = sdcp->sdio->RSP4;
  *resp++ = sdcp->sdio->RSP3;
  *resp++ = sdcp->sdio->RSP2;
  *resp   = sdcp->sdio->RSP1;
  return HAL_SUCCESS;
}

bool sdc_lld_read_special(SDCDriver *sdcp, uint8_t *buf, size_t bytes,
                          uint8_t cmd, uint32_t arg) {
  uint32_t resp[1];

  if (sdc_lld_prepare_read_bytes(sdcp, buf, bytes))
    goto error;

  if (sdc_lld_send_cmd_short_crc(sdcp, cmd, arg, resp)
                                 || MMCSD_R1_ERROR(resp[0]))
    goto error;

  if (sdc_lld_wait_transaction_end(sdcp, 1, resp))
    goto error;

  return HAL_SUCCESS;

error:
  sdc_lld_error_cleanup(sdcp, 1, resp);
  return HAL_FAILED;
}

bool sdc_lld_read(SDCDriver *sdcp, uint32_t startblk,
                  uint8_t *buf, uint32_t blocks) {

#if AT32_SDC_SDIO_UNALIGNED_SUPPORT
  if (((unsigned)buf & 3U) != 0U) {
    uint32_t i;
    for (i = 0U; i < blocks; i++) {
      if (sdc_lld_read_aligned(sdcp, startblk, sdcp->buf, 1)) {
        return HAL_FAILED;
      }
      memcpy(buf, sdcp->buf, MMCSD_BLOCK_SIZE);
      buf += MMCSD_BLOCK_SIZE;
      startblk++;
    }
    return HAL_SUCCESS;
  }
#else /* !AT32_SDC_SDIO_UNALIGNED_SUPPORT */
  osalDbgAssert((((unsigned)buf & 3U) == 0U), "unaligned buffer");
#endif /* !AT32_SDC_SDIO_UNALIGNED_SUPPORT */
  return sdc_lld_read_aligned(sdcp, startblk, buf, blocks);
}

bool sdc_lld_write(SDCDriver *sdcp, uint32_t startblk,
                   const uint8_t *buf, uint32_t blocks) {

#if AT32_SDC_SDIO_UNALIGNED_SUPPORT
  if (((unsigned)buf & 3U) != 0U) {
    uint32_t i;
    for (i = 0U; i < blocks; i++) {
      memcpy(sdcp->buf, buf, MMCSD_BLOCK_SIZE);
      buf += MMCSD_BLOCK_SIZE;
      if (sdc_lld_write_aligned(sdcp, startblk, sdcp->buf, 1))
        return HAL_FAILED;
      startblk++;
    }
    return HAL_SUCCESS;
  }
#else /* !AT32_SDC_SDIO_UNALIGNED_SUPPORT */
  osalDbgAssert((((unsigned)buf & 3U) == 0U), "unaligned buffer");
#endif /* !AT32_SDC_SDIO_UNALIGNED_SUPPORT */
  return sdc_lld_write_aligned(sdcp, startblk, buf, blocks);
}
