==> ChibiOS/ChibiOS-Contrib/os/hal/ports/KINETIS/LLD/hal_sdc_lld.c <==
#include "hal.h"
#include "hal_mmcsd.h"
#define KINETIS_SDHC_PERIPHERAL_FREQUENCY KINETIS_SYSCLK_FREQUENCY
#define KINETIS_SDHC_PRIORITY 12 /* TODO? Default IRQ priority for SDHC */
#define DTOCV_300ms_400kHz    4  /* 4  -> 2^17 -> 328 msec */
#define DTOCV_700ms_25MHz    11  /* 11 -> 2^24 -> 671 msec */
#define DTOCV_700ms_50MHz    12  /* 12 -> 2^25 -> 671 msec */
#define TRACE(t, val)   chDbgWriteTrace ((void *)t, (void *)(uintptr_t)(val))
#define TRACEI(t, val)  chDbgWriteTraceI((void *)t, (void *)(uintptr_t)(val))
#define TRACE(t, val)
#define TRACEI(t, val)
#define DIV_RND_UP(a, b) ( ((a)+(b)-1) / (b) )
#define MMC_ERR_OUT_OF_RANGE            (1U << 31)
#define MMC_ERR_ADDRESS                 (1U << 30)
#define MMC_ERR_BLOCK_LEN               (1U << 29)
#define MMC_ERR_ERASE_SEQ               (1U << 28)
#define MMC_ERR_ERASE_PARAM             (1U << 27)
#define MMC_ERR_WP                      (1U << 26)
#define MMC_ERR_CARD_IS_LOCKED          (1U << 25)
#define MMC_ERR_LOCK_UNLOCK_FAILED      (1U << 24)
#define MMC_ERR_COM_CRC_ERROR           (1U << 23)
#define MMC_ERR_ILLEGAL_COMMAND         (1U << 22)
#define MMC_ERR_CARD_ECC_FAILED         (1U << 21)
#define MMC_ERR_CARD_CONTROLLER         (1U << 20)
#define MMC_ERR_ERROR                   (1U << 19)
#define MMC_ERR_CSD_OVERWRITE           (1U << 16)
#define MMC_ERR_AKE_SEQ                 (1U << 3)

void sdc_lld_init(void) {
#if PLATFORM_SDC_USE_SDC1 == TRUE
  sdcObjectInit(&SDCD1);
#endif
}

void sdc_lld_start(SDCDriver *sdcp) {

  if (sdcp->state == BLK_STOP) {
    SIM->SOPT2 =
      (SIM->SOPT2 & ~SIM_SOPT2_SDHCSRC_MASK) |
      SIM_SOPT2_SDHCSRC(0);  /* SDHC clock source 0: Core/system clock. */
    SIM->SCGC3 |= SIM_SCGC3_SDHC; /* Enable clock to SDHC peripheral */

    /* Reset the SDHC block */
    SDHC->SYSCTL |= SDHC_SYSCTL_RSTA;
    while(SDHC->SYSCTL & SDHC_SYSCTL_RSTA) {
      osalThreadSleepMilliseconds(1);
    }

    SDHC->IRQSIGEN = 0;
    nvicEnableVector(SDHC_IRQn, KINETIS_SDHC_PRIORITY);
  }
}

void sdc_lld_stop(SDCDriver *sdcp) {

  if (sdcp->state != BLK_STOP) {
    /* TODO: Should we perform a reset (RSTA) before putting the
       peripheral to sleep? */

    /* Disable the card clock */
    SDHC->SYSCTL &= ~( SDHC_SYSCTL_SDCLKEN );

    /* Turn off interrupts */
    nvicDisableVector(SDHC_IRQn);
    SDHC->IRQSIGEN = 0;
    SDHC->IRQSTATEN &= ~( SDHC_IRQSTATEN_CINTSEN |
			  SDHC_IRQSTATEN_CINSEN |
			  SDHC_IRQSTATEN_CRMSEN );

    /* Disable the clock to the SDHC peripheral block */
    SIM->SCGC3 &= ~( SIM_SCGC3_SDHC );
  }
}

void sdc_lld_start_clk(SDCDriver *sdcp) {

  (void)sdcp;

  /* Stop the card clock (it should already be stopped) */
  SDHC->SYSCTL &= ~( SDHC_SYSCTL_SDCLKEN );

  /* Change the divisor and DTOCV for a 400kHz card closk */
  uint32_t sysctl =
    SDHC_SYSCTL_DTOCV(DTOCV_300ms_400kHz) |
    divisor_settings(DIV_RND_UP(KINETIS_SDHC_PERIPHERAL_FREQUENCY, 400000));

  /* Restart the clock */
  enable_clock_when_stable(sysctl);

  /* Reset any protocol machinery; this also runs the clock for 80
     cycles without any data bits to help initalize the card's state
     (the Kinetis peripheral docs say that this is required after card
     insertion or power-on, but the abridged SDHC specifications I
     have don't seem to mention it) */
  SDHC->SYSCTL |= SDHC_SYSCTL_INITA;

  TRACE(9, SDHC->PRSSTAT);
}

void sdc_lld_set_data_clk(SDCDriver *sdcp, sdcbusclk_t clk) {

  (void)sdcp;

  /* Stop the card clock */
  SDHC->SYSCTL &= ~( SDHC_SYSCTL_SDCLKEN );

  /* Change the divisor */
  uint32_t ctl;
  switch (clk) {
  default:
  case SDC_CLK_25MHz:
    ctl =
      SDHC_SYSCTL_DTOCV(DTOCV_700ms_25MHz) |
      divisor_settings(DIV_RND_UP(KINETIS_SDHC_PERIPHERAL_FREQUENCY, 25000000));
    break;
  case SDC_CLK_50MHz:
    ctl =
      SDHC_SYSCTL_DTOCV(DTOCV_700ms_50MHz) |
      divisor_settings(DIV_RND_UP(KINETIS_SDHC_PERIPHERAL_FREQUENCY, 50000000));
    break;
  }

  /* Restart the clock */
  enable_clock_when_stable(ctl);
}

void sdc_lld_stop_clk(SDCDriver *sdcp) {
  (void)sdcp;
  SDHC->SYSCTL &= ~( SDHC_SYSCTL_SDCLKEN );
}

void sdc_lld_set_bus_mode(SDCDriver *sdcp, sdcbusmode_t mode) {
  (void)sdcp;
  uint32_t proctl = SDHC->PROCTL & ~( SDHC_PROCTL_DTW_MASK );

  switch (mode) {
  case SDC_MODE_1BIT:
    proctl |= SDHC_PROCTL_DTW_1BIT;
    break;
  case SDC_MODE_4BIT:
    proctl |= SDHC_PROCTL_DTW_4BIT;
    break;
  case SDC_MODE_8BIT:
    proctl |= SDHC_PROCTL_DTW_8BIT;
    break;
  default:
    osalDbgAssert(false, "invalid bus mode");
    break;
  }

  SDHC->PROCTL = proctl;
}

void sdc_lld_send_cmd_none(SDCDriver *sdcp, uint8_t cmd, uint32_t arg) {
  SDHC->CMDARG = arg;
  uint32_t xfer =
    SDHC_XFERTYP_CMDINX(cmd) |
    SDHC_XFERTYP_CMDTYP_NORMAL |
    /* DPSEL=0, CICEN=0, CCCEN=0 */
    SDHC_XFERTYP_RSPTYP_NONE;

  send_and_wait_cmd(sdcp, xfer);
}

bool sdc_lld_send_cmd_short(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                            uint32_t *resp) {
  SDHC->CMDARG = arg;
  uint32_t xfer =
    SDHC_XFERTYP_CMDINX(cmd) |
    SDHC_XFERTYP_CMDTYP_NORMAL |
    /* DPSEL=0, CICEN=0, CCCEN=0 */
    SDHC_XFERTYP_RSPTYP_48;

  bool waited = send_and_wait_cmd(sdcp, xfer);

  *resp = SDHC->CMDRSP[0];

  return waited;
}

bool sdc_lld_send_cmd_short_crc(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                                uint32_t *resp) {
  SDHC->CMDARG = arg;
  uint32_t xfer =
    SDHC_XFERTYP_CMDINX(cmd) |
    SDHC_XFERTYP_CMDTYP_NORMAL |
    /* DPSEL=0, CICEN=1, CCCEN=1 */
    SDHC_XFERTYP_CICEN | SDHC_XFERTYP_CCCEN |
    SDHC_XFERTYP_RSPTYP_48;

  bool waited = send_and_wait_cmd(sdcp, xfer);

  *resp = SDHC->CMDRSP[0];
  TRACE(11, *resp);

  return waited;
}

bool sdc_lld_send_cmd_long_crc(SDCDriver *sdcp, uint8_t cmd, uint32_t arg,
                               uint32_t *resp) {

  /* In response format R2 (the 136-bit or "long" response) the CRC7
     field is valid, but the command index field is set to all 1s, so
     we need to disable the command index check function (CICEN=0). */
  
  SDHC->CMDARG = arg;
  uint32_t xfer =
    SDHC_XFERTYP_CMDINX(cmd) |
    SDHC_XFERTYP_CMDTYP_NORMAL |
    /* DPSEL=0, CICEN=0, CCCEN=1 */
    SDHC_XFERTYP_CCCEN |
    SDHC_XFERTYP_RSPTYP_136;

  bool waited = send_and_wait_cmd(sdcp, xfer);

  resp[0] = SDHC->CMDRSP[0];
  resp[1] = SDHC->CMDRSP[1];
  resp[2] = SDHC->CMDRSP[2];
  resp[3] = SDHC->CMDRSP[3];

  return waited;
}

bool sdc_lld_read(SDCDriver *sdcp, uint32_t startblk,
		  uint8_t *buf, uint32_t n) {
  uint32_t cmdx = (n == 1)?
    SDHC_XFERTYP_CMDINX(MMCSD_CMD_READ_SINGLE_BLOCK) :
    SDHC_XFERTYP_CMDINX(MMCSD_CMD_READ_MULTIPLE_BLOCK);
  cmdx |= SDHC_XFERTYP_DTDSEL;

  return sdc_lld_transfer(sdcp, startblk, (uintptr_t)buf, n, cmdx);
}

bool sdc_lld_write(SDCDriver *sdcp, uint32_t startblk,
                   const uint8_t *buf, uint32_t n) {
  uint32_t cmdx = (n == 1)?
    SDHC_XFERTYP_CMDINX(MMCSD_CMD_WRITE_BLOCK) :
    SDHC_XFERTYP_CMDINX(MMCSD_CMD_WRITE_MULTIPLE_BLOCK);

  return sdc_lld_transfer(sdcp, startblk, (uintptr_t)buf, n, cmdx);
}

bool sdc_lld_read_special(SDCDriver *sdcp, uint8_t *buf, size_t bytes,
			  uint8_t cmd, uint32_t argument) {
  uintptr_t bufaddr = (uintptr_t)buf;

  osalDbgCheck((bufaddr & 0x03) == 0);  /* Must be 32-bit aligned */
  osalDbgCheck(bytes > 0);
  osalDbgCheck(bytes < 4096);

  osalDbgAssert((SDHC->PRSSTAT & (SDHC_PRSSTAT_DLA|SDHC_PRSSTAT_CDIHB|SDHC_PRSSTAT_CIHB)) == 0,
		"SDHC interface not ready");

  TRACE(5, argument);

  /* Store the cmd argument and DMA start address */
  SDHC->CMDARG = argument;
  SDHC->DSADDR = bufaddr;

  /* We're reading one block, of a (possibly) nonstandard size */
  SDHC->BLKATTR = SDHC_BLKATTR_BLKSIZE(bytes);

  uint32_t xfer =
    SDHC_XFERTYP_CMDINX(cmd) |    /* the command */
    SDHC_XFERTYP_DTDSEL |         /* read transfer (card -> host) */
    SDHC_XFERTYP_CMDTYP_NORMAL |
    SDHC_XFERTYP_CICEN | SDHC_XFERTYP_CCCEN |
    SDHC_XFERTYP_RSPTYP_48 |
    SDHC_XFERTYP_DPSEL | SDHC_XFERTYP_DMAEN;  /* DMA-assisted data transfer */

  return send_and_wait_transfer(sdcp, xfer);
}
